--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
-        <script src="./js/index.js"></script>
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        
+        <h1>Blackjack</h1>
+        <p id ="message-el">You want to play? Let's play.</p>
+        <p>Cards : </p>
+        <p>Sum : </p>
+        <script src="index.js"></script>
     </body>
 </html>
