start() button and function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <p id ="message-el">You want to play? Let's play.</p>
         <p>Cards : </p>
         <p>Sum : </p>
-        <script src="index.js"></script>
+        <button onclick="start()">Start game</button>
+        <script src="js/index.js"></script>
     </body>
 </html>
