Sum rendered to user.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1>Blackjack</h1>
         <p id ="message-el">You want to play? Let's play.</p>
         <p>Cards : </p>
-        <p>Sum : </p>
+        <p id="sum-el">Sum : </p>
         <button onclick="start()">Start game</button>
         <script src="js/index.js"></script>
     </body>
