Cards rendered to user.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Blackjack</h1>
         <p id ="message-el">You want to play? Let's play.</p>
-        <p>Cards : </p>
+        <p id="cards-el">Cards : </p>
         <p id="sum-el">Sum : </p>
         <button onclick="start()">Start game</button>
         <script src="js/index.js"></script>
