newCard() function and button added.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <p id="cards-el">Cards : </p>
         <p id="sum-el">Sum : </p>
         <button onclick="start()">Start game</button>
+        <button onclick="newCard()">New card</button>
         <script src="js/index.js"></script>
     </body>
 </html>
