--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <p id ="message-el">You want to play? Let's play.</p>
         <p id="cards-el">Cards : </p>
         <p id="sum-el">Sum : </p>
+        <p id="player-el"></p>
         <button onclick="start()">Start game</button>
         <button onclick="newCard()">New card</button>
         <script src="js/index.js"></script>
